Tests/JTran.Transform.UnitTests/Test Transforms/SyntaxErrors/foreach2.jtran
{
    "#foreach()":
    {
        "LastName":    "#(///Surname)",
        "FirstName":   "#(Name)",
        "Age":         "#(Age)",
        "Address":     "#(///Address)"
    }
}